Jython NEWS

For more details, please see https://hg.python.org/jython

Jython 2.7rc3
  Bugs fixed
   - [ 1572 ] sys-package-mgr console messages silenced by default. Thanks to Emmanuel Jannetti.

Jython 2.7rc2
  Bugs fixed
   - [ 2301 ] time.strftime now always returns a bytestring (fixes pip on Japanese locales)
   - [ 2297 ] Updates Jython installer to use jython.exe
   - [ 2298 ] Fix setuptools wheel bundled by ensurepip so it check for Windows on Jython
   - [ 2300 ] Fix bin/jython.py to not consume subcommand args
  New features
   - Installer installs pip, setuptools by default, but custom builds can de-select.
     Does not change standalone usage. (Runs jython -m ensurepip as last install step.)
   - Makes jython.py be the default launcher (as bin/jython) if CPython 2.7 is available.
  Removed support
   - Installer no longer supports using an alternative JRE when generating Jython launchers.
     Instead just use JAVA_HOME environment variable to select the desired JRE.
     (Removed because of the new native launcher, jython.exe, that is now used on Windows.)

Jython 2.7rc1
  Bugs fixed
   - [ 1793 ] Fix relative seek in read/write mode via a non-buffered readinto() method 
   - [ 2282 ] Speed up startup with compiled $py.class files included for standalone, full jars
   - [ 1371, 2283, 2296 ] More robustness wrt security managers, python.home, import of non-ascii names
   - [ 2068 ] Use position(long) setter to manually update file channel's position post-write.
   - [ 2288 ] Posix link and symlink support now uses NIO2
   - [ 2120 ] Use Java instead of JNR for os.chmod, os.mkdir when running on Windows
   - [ 2226 ] Matches CPython's re support of what counts as a Unicode whitespace codepoint
   - [ 1725 ] Speed up re matching by not executing SRE_STATE#TRACE in the sre regex engine
   - Exceptions with non-ascii args should not cause an exception when displayed on console